main/default/objects/QuoteEndorsementChangeSummary__c/QuoteEndorsementChangeSummary__c.object-meta.xml
<CustomObject>
    <label>Quote Endorsement Change Summary</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuoteEndorsementChangeSummaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>