main/default/objects/QuoteEndorsementChangeSummary__c/fields/CoverageName__c.field-meta.xml
<CustomField>
    <fullName>CoverageName__c</fullName>
    <label>CoverageName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>