main/default/objects/QuoteEndorsementChangeSummary__c/fields/Deleted_Record_Summary__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Record_Summary__c</fullName>
    <label>Deleted Record Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>