main/default/objects/QuoteEndorsementChangeSummary__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>FieldName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>