main/default/objects/QuoteEndorsementChangeSummary__c/fields/Limit_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Limit_Deductible__c</fullName>
    <label>LIMIT/DEDUCTIBLE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>