main/default/objects/QuoteEndorsementChangeSummary__c/fields/New_Record_Summary__c.field-meta.xml
<CustomField>
    <fullName>New_Record_Summary__c</fullName>
    <label>New Record Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>