main/default/objects/QuoteEndorsementChangeSummary__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>NewValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>