main/default/objects/QuoteEndorsementChangeSummary__c/fields/Old_QuoteAzureId__c.field-meta.xml
<CustomField>
    <fullName>Old_QuoteAzureId__c</fullName>
    <formula>Old_QuoteId__r.Azure_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old QuoteAzureId</label>
    <type>Text</type>
</CustomField>