main/default/objects/QuoteEndorsementChangeSummary__c/fields/Old_QuoteId__c.field-meta.xml
<CustomField>
    <fullName>Old_QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old QuoteId</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>QuoteEndorsementChangeSummaries (Old Quote Id)</relationshipLabel>
    <relationshipName>QuoteEndorsementChangeSummaries1</relationshipName>
    <type>Lookup</type>
</CustomField>