main/default/objects/QuoteEndorsementChangeSummary__c/fields/QuoteAzureId__c.field-meta.xml
<CustomField>
    <fullName>QuoteAzureId__c</fullName>
    <formula>QuoteId__r.Azure_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteAzureId</label>
    <type>Text</type>
</CustomField>