main/default/objects/QuoteEndorsementChangeSummary__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuoteId</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>QuoteEndorsementChangeSummaries (QuoteId)</relationshipLabel>
    <relationshipName>QuoteEndorsementChangeSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>