main/default/objects/QuoteEndorsementChangeSummary__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>