main/default/objects/QuoteEndorsementChangeSummary__c/fields/RecordIdLink__c.field-meta.xml
<CustomField>
    <fullName>RecordIdLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + RecordId__c , RecordId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordIdLink</label>
    <type>Text</type>
</CustomField>