main/default/objects/QuoteEndorsementChangeSummary__c/fields/SubCoverageName__c.field-meta.xml
<CustomField>
    <fullName>SubCoverageName__c</fullName>
    <label>SubCoverageName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>