main/default/objects/QuoteEndorsementChangeSummary__c/fields/Update_Record_Summary__c.field-meta.xml
<CustomField>
    <fullName>Update_Record_Summary__c</fullName>
    <label>Update Record Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>